# Recall

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_add_tasks_and_delegations.py  003_add_license_and_platform_keys.py  004_add_waitlist_entries.py  005_add_password_hash.py  006_add_new_integration_providers.py  007_add_sync_cursor_and_execution.py  008_add_agent_learning.py  009_delegation_execution_payload.py  010_org_billing_stripe.py
apps/api/app/: config.py  main.py  middleware.py
apps/api/app/agents/: learner.py  observer.py  planner.py
apps/api/app/api/: deps.py  router.py  schemas.py
apps/api/app/api/routes/: admin.py  agent.py  agents.py  analytics.py  auth.py  billing.py  comments.py  context.py  flow.py  governance.py  health.py  integrations.py  knowledge.py  notifications.py  oidc_auth.py  orgs.py  pilot.py  skills.py  stripe_webhook.py  teams.py  users.py  waitlist.py
apps/api/app/db/: __init__.py  base.py  models.py  session.py
apps/api/app/services/: analytics_engine.py  context_engine.py  credential_service.py  delegation_payload.py  execution_engine.py  graph_builder.py  integration_hub.py  llm_service.py  metrics_service.py  notification_service.py  oauth_service.py  oidc_sso_service.py  rate_limiter.py  retention_service.py  skill_executor.py  sync_service.py
apps/api/app/services/tool_adapters/: __init__.py  base.py  confluence.py  github.py  jira.py  slack.py
apps/api/scripts/: seed.py
apps/api/tests/: conftest.py  test_auth_and_context.py  test_execution_payload.py  test_github_tool_mock.py  test_health.py
apps/web/: Dockerfile  eslint.config.mjs  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(auth)/register/: page.tsx
apps/web/src/app/app/: layout.tsx  page.tsx
apps/web/src/app/app/admin/: page.tsx
apps/web/src/app/app/agent/: page.tsx
apps/web/src/app/app/analytics/: page.tsx
apps/web/src/app/app/flow/: page.tsx
apps/web/src/app/app/governance/: page.tsx
apps/web/src/app/app/integrations/: page.tsx
apps/web/src/app/app/knowledge/: page.tsx
apps/web/src/app/app/notifications/: page.tsx
apps/web/src/app/app/pilot/: page.tsx
apps/web/src/app/app/search/: page.tsx
apps/web/src/app/app/settings/: page.tsx
apps/web/src/app/app/skills/: page.tsx
apps/web/src/app/app/teams/: page.tsx
apps/web/src/components/: DemoBanner.tsx  Footer.tsx  Navbar.tsx
apps/web/src/components/sections/: AskSection.tsx  CTASection.tsx  ComparisonSection.tsx  FlowSection.tsx  GovernanceSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  IntegrationsSection.tsx  PilotSection.tsx  ProblemSection.tsx  VisionSection.tsx
apps/web/src/lib/: api.ts  auth.tsx  demo-data.ts  demo.tsx  strict-api.ts  use-api-data.ts
infra/: litellm-config.yaml
